// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code Block Bulleted code block: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "content": "function () {
  alert(document.location.href)
  console.log(\\"hello\\")
  // You can also write comments!
}",
    "fileName": "hello.js",
    "indent": 1,
    "type": "codeBlock",
  },
]
`;

exports[`Code Block Code block with bullet: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 1,
    "nodes": Array [
      Object {
        "raw": "Bullet",
        "text": "Bullet",
        "type": "plain",
      },
    ],
    "type": "line",
  },
  Object {
    "content": "function () {
  alert(document.location.href)
  console.log(\\"hello\\")
  // You can also write comments!
}",
    "fileName": "hello.js",
    "indent": 1,
    "type": "codeBlock",
  },
  Object {
    "indent": 1,
    "nodes": Array [
      Object {
        "raw": "Bullet",
        "text": "Bullet",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`Code Block Consecutive code blocks: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "content": "function () {
  alert(document.location.href)
  console.log(\\"hello\\")
  // You can also write comments!
}",
    "fileName": "hello.js",
    "indent": 0,
    "type": "codeBlock",
  },
  Object {
    "content": "function () {
  alert(document.location.href)
  console.log(\\"hello\\")
  // You can also write comments!
}",
    "fileName": "hello.js",
    "indent": 0,
    "type": "codeBlock",
  },
]
`;

exports[`Code Block Simple code block: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "content": "function () {
  alert(document.location.href)
  console.log(\\"hello\\")
  // You can also write comments!
}",
    "fileName": "hello.js",
    "indent": 0,
    "type": "codeBlock",
  },
]
`;
